Feat/cdn for storage account (#14)
* Configuration for CDN

* Now always building image and tagging according to branch

* Fixing tagging logic

* Adding configuration for CDN profile itself around endpoint

* Adding more possibly required properties to CDN endpoint

* Using split to get storage account domain name from URI

* Using publicAssetAccess property to determine allowBlobPublicAccess value

* Property configuration for allowing/denying public access to asets

* Adding publicNetworkAccess setting

* Proper (finicky) values for public container access

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -2,11 +2,10 @@ name: Create and publish Docker image
 
 on:
   push:
-    branches: [main]
   workflow_dispatch:
 
 concurrency: 
-  group: pimcore-azure-provisioning__${{ github.ref }}
+  group: ${{ github.repository }}__${{ github.ref }}
   cancel-in-progress: true
 
 env:
@@ -38,12 +37,21 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v1
 
+      - name: Determine image label
+        id: label
+        run: |
+          if [ "${{ github.ref }}" == "refs/heads/main" ]; then
+            echo "label=latest" >> $GITHUB_OUTPUT
+          else
+            echo "label=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
+          fi
+
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: latest
+          tags: ${{ steps.label.outputs.label }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
