Improving Key Vault security (#31)
* Disabling Key Vault public access and explictly allowing in this machine's IP

* Fixing refs to resourceGroupName

* Typo

* Typo

* Removing public access option so that firewall is properly used

* Fixing references to parameters.json in README

--- a/stub.parameters.jsonc
+++ b/stub.parameters.jsonc
@@ -11,6 +11,9 @@
     "resourceGroupName": {
       "value": "my-resource-group"
     },
+    "servicePrincipalName": {
+      "value": "my-service-principal"
+    },
     // The location of your resources. A complete list can be found by running
     // az account list-locations -o table
     "location": {
