Feat/longterm db backups (#33)
* Partially implemented database backup SA

* Full configuration for long-term database backups

* Fixing publicNetworkAccess value - null still allows other firewall exceptions

--- a/stub.parameters.jsonc
+++ b/stub.parameters.jsonc
@@ -138,6 +138,14 @@
     "databaseGeoRedundantBackup": {
       "value": false
     },
+    "databaseBackupsStorageAccountName": {
+      "value": "my-database-backup-storage-account"
+    },
+    // The database backups Storage Account SKU. A complete list can be found here 
+    // https://learn.microsoft.com/en-us/azure/templates/microsoft.storage/storageaccounts?pivots=deployment-language-bicep#sku.
+    "databaseBackupsStorageAccountSku": {
+      "value": "Standard_LRS"
+    },
     "containerAppsEnvironmentName": {
       "value": "my-container-apps-environment"
     },
