Ability to manage custom domains and HTTPS certificates (#34)
* Parameters for custom domain and cert

* Typo

* Updating example parameters

* Running az bicep upgrade on image build

--- a/stub.parameters.jsonc
+++ b/stub.parameters.jsonc
@@ -157,6 +157,12 @@
     "phpFpmContainerAppName": {
       "value": "my-php-fpm-container-app"
     },
+    "phpFpmContainerAppCustomDomain": {
+      "value": "my-custom-domain.example.com"
+    },
+    "phpFpmContainerAppCertificateName": {
+      "value": "my-certificate-name"
+    },
     // Whether to use startup/readiness/liveness probes with the PHP-FPM Container App.
     "phpFpmContainerAppUseProbes": {
       "value": false
