--- a/stub.parameters.jsonc
+++ b/stub.parameters.jsonc
@@ -157,6 +157,9 @@
     "phpFpmContainerAppName": {
       "value": "my-php-fpm-container-app"
     },
+    // The following two values (custom domain and certificate name) are optional, and can not be present during the initial provisioning of the environment. 
+    // This is because manual intervention is required in order to validate the custom domain against your DNS. Once this has been done manually the first time
+    // the environment is set up, the values can be present here so that subsequent provisions will leave the custom domain and certificate intact.
     "phpFpmContainerAppCustomDomain": {
       "value": "my-custom-domain.example.com"
     },
