Documentation on new param

--- a/stub.parameters.jsonc
+++ b/stub.parameters.jsonc
@@ -167,6 +167,7 @@
     "phpFpmContainerAppCertificateName": {
       "value": "my-certificate-name"
     },
+    // Set to true if using a certificate managed by Azure Container Apps. Otherwise, set to false.
     "phpFpmContainerAppCertificateIsManaged": {
       "value": true
     },
