Init container app job (#63)
* Init container app job

* Fixing array concat

* Default resources for init job

* Adding missing storage account key secret ref

* Fixing deploy of init image

* Adding env vars and secrets for Pimcore install

* Setting up Log Analytics Workspace so we can get Container App Job logs

* Missing param passing

* Older API to gain access to listKeys function

* Use appLogsConfiguration with destination none if LAW not defined

* Log Analytics no longer optional

* Env vars for SSL cert path for DB, and Pimcore install bool check

* Rearranging env vars for readability

* Forcing PIMCORE_INSTALL value to be a string

* Ensuring pimcore admin password Key Vault ref is actually optinoal

* Returning empty string for INIT_IMAGE_NAME if not set

* Removing warning about secrets

* Removing unnecessary dependsOn

--- a/bicep/bicepconfig.json
+++ b/bicep/bicepconfig.json
@@ -6,6 +6,9 @@
       "rules": {
         "no-unused-params": {
           "level": "off"
+        },
+        "secure-secrets-in-params": {
+          "level": "off"
         }
       }
     }
