--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -2,6 +2,8 @@ name: Create and publish Docker image
 
 on:
   push:
+    branches: 
+      - "*"
   workflow_dispatch:
   release: 
     types: [created]
