--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -4,9 +4,9 @@ on:
   push:
     branches: 
       - "*"
+    tags:
+      - "v*.*.*"
   workflow_dispatch:
-  release: 
-    types: [created]
 
 concurrency: 
   group: ${{ github.repository }}__${{ github.ref }}
@@ -17,13 +17,8 @@ env:
   IMAGE_NAME: torqit/pimcore-azure-provisioning
 
 jobs:
-  release:
-    uses: TorqIT/github-actions-workflows/.github/workflows/update-major-release-tag.yml@v1
-    if: github.event_name == 'release' && github.event.action == 'created'
-
   build-and-push-image:
     runs-on: ubuntu-latest
-    needs: [release]
     if: always() && (needs.release.result == 'success' || needs.release.result == 'skipped')
     permissions:
       contents: read
@@ -47,28 +42,17 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Determine image tags
-        id: tags
-        run: |
-          if [ "${{ github.ref }}" == "refs/heads/main" ]; then
-            echo "ref=latest" >> $GITHUB_OUTPUT
-            if [ "${{ needs.release.result }}" == "success" ]; then
-              echo "major=${{ needs.release.outputs.major }}" >> $GITHUB_OUTPUT
-              echo "specific=${{ needs.release.outputs.specific }}" >> $GITHUB_OUTPUT
-            fi
-          else 
-            echo "ref=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
-          fi
-
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            ${{ steps.tags.outputs.ref }}
-            ${{ steps.tags.outputs.major }}
-            ${{ steps.tags.outputs.specific }}
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=sha
       
       - name: Build Docker image
         uses: docker/build-push-action@v6
