Optional volume mounts (#85)
* Optional volume mounts as File Shares in Storage Account

* Default mount options

* Try NFS volume instead

* Try NfsAzureFile for volumes instead of default SMB

* Testing file share/mount creation

* Separate Storage Account for file shares

* Remove unused resource

* Remove parameter which apprently doesn't jive with file-based accounts

* Play with access tiers

* Continue even if cancel fails

* Play with access tiers

* Play with access tiers

* More explicit dependsOn of VNet

* Improve workflow name

* Only assign role if generating secrets

* TODOs

* Fix ternary

* Use safe access operator

* Max file share size param

* Provide storageName parameter

* Comments

* Fix storage account name

* Proper mapping of fileShare array

* Fix parameters

* Disable HTTPS only

* Publish image as step of CI

* Test

* Run cd.yml on pull_request instead

* Try type=branch to get a branch-tagged image

* Try another approach to get image name in tag

* Try publishing image on all branch pushes?

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Deploy and test changes in an Azure environment
+name: CI
 
 on:
   pull_request:
@@ -30,6 +30,7 @@ jobs:
 
       - name: Cancel Azure deployment if the deploy step failed or was cancelled
         if: always()
+        continue-on-error: true
         run: |
           if [ ${{ steps.deploy.outcome }} == 'failure' ] || [ ${{ steps.deploy.outcome }} == 'cancelled' ]; then
             touch .env
