Cancel concurrent CI workflows on PR number rather than ref

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
 
 concurrency: 
-  group: ${{ github.repository }}__${{ github.ref }}-ci
+  group: ${{ github.repository }}__${{ github.event.pull_request.number }}-ci
   cancel-in-progress: true
 
 jobs:
