--- a/.github/test-files/docker-compose.yml
+++ b/.github/test-files/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   azure:
     build:
       dockerfile: Dockerfile
-      context: ../
+      context: ../../
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./parameters.json:/azure/parameters.json
