--- a/.github/workflows/pr-deploy-and-test.yml
+++ b/.github/workflows/pr-deploy-and-test.yml
@@ -2,6 +2,7 @@ name: Deploy changes to Azure and test
 
 on:
   pull_request:
+    types: synchronize
 
 concurrency: 
   group: ${{ github.repository }}__${{ github.ref }}-ci
